--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -1,44 +1,42 @@
 @import url(https://fonts.googleapis.com/css?family=Domine|Hind|Knewave|Roboto+Slab);
+* { margin:0; padding:0; box-sizing:border-box; }
 
-
-.image { 
-  max-width: 100%;
-  max-height: 100%;
+.image {
+  background: url(../images/pink.jpg);
+  padding: 2em 0 4em;
+  background-repeat: no-repeat;
 }
 
 header {
     background-color: #FFED74;
-    border: 1px black solid;
-    padding: 20px;
 }
-
-nav { 
+section {
+	padding:4em 0;
+}
+nav {
     background-color: #E8C66A;
-    border: 1px black solid;
-    padding: 20px;
-  }
-
+}
+nav a {
+	display:inline-block;
+	padding:1em;
+	/* width: 20%; */
+	/* text-align: center; */
+	/* float: left; */
+	color: inherit;
+	text-decoration: none;
+}
 footer {
    background-color: #FF957E;
     border: 1px black solid;
     padding: 20px;
 }
 
-h1 { 
-   position: absolute; 
-   top: 1px; 
-   left: 0; 
-   width: 100%; 
+.logo {
    text-align: center;
    font-family: 'Knewave', cursive;
-   font-size: 8.5em;
-   color: black;
+   font-size: 6.5em;
 }
-h2 {
-position: absolute; 
-   top: 250px; 
-   left: 0; 
-   width: 100%; 
+h1 { 
    text-align: center;
   font-family: 'Hind', sans-serif;
    font-size: 1.5em;
@@ -48,9 +46,8 @@ position: absolute;
 
 main {
 	background-color: #FFE2B8;
-    border: 1px black solid;
-    padding: 20px;
-
+	width:1200px;
+	margin:auto;
 }
 
 a {
@@ -66,24 +63,7 @@ p {
   font-size: 1.25em;
 }
 
-ul {
-	font-family: 'Roboto Slab', serif;
-  line-height: 1.5em;
-  font-size: 1.25em;
-}
-
-.menu {
-display:inline;
-}
-
 .description {
   font-weight: italic;
   font-size: 1em;
-}
-
-#navbar {
-	list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: inline
 }
