--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Domine|Hind|Knewave|Roboto+Slab);
+@import url(https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Hind|Indie+Flower|Nunito|Knewave|Montserrat|Roboto|Roboto+Slab);
 * { margin:0; padding:0; box-sizing:border-box; }
 
 .image {
@@ -8,27 +8,30 @@
 }
 
 header {
-    background-color: #FFED74;
+    background-color: #FF5965;
 }
 section {
 	padding:4em 0;
 }
 nav {
-    background-color: #E8C66A;
+    background-color: #FF5965;
 }
 nav a {
 	display:inline-block;
 	padding:1em;
-	/* width: 20%; */
-	/* text-align: center; */
-	/* float: left; */
-	color: inherit;
+	width: 20%;
+  font-size: 1.2em;
+	text-align: center;
+	float: left;
+	color: white;
+  background-color: #FF5965;
 	text-decoration: none;
+  font-family: 'Gloria Hallelujah', cursive;
 }
+
 footer {
-   background-color: #FF957E;
-    border: 1px black solid;
-    padding: 20px;
+  background-color: #FF5965;
+  padding: 20px;
 }
 
 .logo {
@@ -38,32 +41,46 @@ footer {
 }
 h1 { 
    text-align: center;
-  font-family: 'Hind', sans-serif;
+   font-family: 'Montserrat', sans-serif;
    font-size: 1.5em;
 
 }  
 
+h2 {
+ font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+ font-family: 'Montserrat', sans-serif;
+}
+
+h4 {
+ font-family: 'Montserrat', sans-serif;
+}
 
 main {
-	background-color: #FFE2B8;
 	width:1200px;
 	margin:auto;
+  padding-top: 5em;
 }
 
 a {
-font-family: 'Roboto Slab', serif;
+font-family: 'Nunito', sans-serif;
 font-style: light;
 line-height: 1.5em;
-font-size: 1.25em;
+font-size: 1em;
 }
 
 p {
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Nunito', sans-serif;
   line-height: 1.5em;
-  font-size: 1.25em;
+  font-size: 1.1em;
 }
 
 .description {
   font-weight: italic;
   font-size: 1em;
+  padding-bottom: 2em;
+  padding-top: 8em;
+  text-align: center;
 }
